--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
+:root{
+  --blue: rgb(2, 0, 114);
+
+  --blue-as-shadow: rgb(44, 44, 88);
+  
+  --green-op-03: rgba(0, 255, 0, 0.3);
+  --green-op-08: rgba(0, 255, 0, 0.8);
+  --green-op-1: rgb(0, 255, 0);
+
+  --yellow-op-03: rgba(255, 208, 0, 0.3);
+  --yellow-op-08: rgba(255, 208, 0, 0.8);
+  --yellow-op-1: rgb(255, 208, 0);
+
+  --red-op-03: rgba(255, 0, 0, 0.3);
+  --red-op-08: rgba(255, 0, 0, 0.8);
+  --red-op-1: rgb(255, 0, 0);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  justify-content: center;
+  background-image: url("./assets/images/bg.png");
+}
+
+h1,a,p{
+  color: var(--blue);
 }
